--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,9 +1,21 @@
 .h-pokemon {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-around;
+   
 }
 
 .h-img {
-    width: 25rem;
+    width: 20rem;
+    padding: 1rem;
+}
+
+@media screen and (min-width: 600px) {
+    .h-pokemon {
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    .h-img {
+        width: 25rem;
+    }
 }
