--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,21 +1,19 @@
 .h-pokemon {
     display: flex;
-    flex-direction: column;
     align-items: center;
-   
+    justify-content: space-around;
 }
 
 .h-img {
-    width: 20rem;
-    padding: 1rem;
+    width: 25rem;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (max-width: 380px) {
     .h-pokemon {
-        flex-direction: row;
-        justify-content: space-around;
+        flex-direction: column;
     }
     .h-img {
-        width: 25rem;
+        width: 20rem;
+        padding: 1rem;
     }
 }
